--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta http-equiv="pragma" content="no-cache"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
-  <title>koa-web-kit</title>
+  <title>vue-web-kit</title>
 </head>
 <body>
-  <!--<p>{= title =}</p>-->
   <div id="app">
   </div>
 </body>
